--- a/localization/jpn/AigisMod-Keyword-Strings.json
+++ b/localization/jpn/AigisMod-Keyword-Strings.json
@@ -275,7 +275,7 @@
     "NAMES": [
       "プレートアーマー"
     ],
-    "DESCRIPTION": "ターン終了時にバフと 同の #yブロック を付与する。HPが減少した時 #y値 が #b1 減少する。"
+    "DESCRIPTION": "ターン終了時に #yブロック を得る。HPが減少した時 #y値 が #b1 減少する。"
   },
   {
     "NAMES": [
@@ -319,7 +319,7 @@
     "DESCRIPTION": "オーブ: ランダムな敵にダメージを与える。 流星カードをプレイするとダメージが上昇する。"
   },
   {
-    "PROPER_NAME": "暗黒騎士",
+    "PROPER_NAME": "ダークファイター",
     "NAMES": [
       "暗黒騎士",
       "ダークファイター",
