--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -86,14 +86,14 @@
     "NAME": "難攻不落の要塞",
     "FLAVOR": "「国はなくとも、残った民たちのためにも私は戦います」-ルイーズ",
     "DESCRIPTIONS": [
-      "戦闘開始時に #y敏捷性 #b2 を得る。 ターン開始時に手札の #yランダム なカードの  #yコスト が このターン中 #b1 増加する。"
+      "戦闘開始時に #y敏捷性 #b2 を得る。 ターン開始時に手札の #yランダム なカードの #yコスト が このターン中 #b1 増加する。"
     ]
   },
   "aigisMod:RoyalHighness": {
     "NAME": "ロイヤルハイネス",
     "FLAVOR": "「私と王子が王国を作ったら…きっとすてきだって思わない？」-シビラ",
     "DESCRIPTIONS": [
-      "1ターンに1回、  #yプリンセス をドローかプレイした時、 このターン中 #y筋力 #b1 と #y敏捷性 #b1 を得る。"
+      "1ターンに1回、 #yプリンセス をドローかプレイした時、 このターン中 #y筋力 #b1 と #y敏捷性 #b1 を得る。"
     ]
   },
   "aigisMod:FidelityHarmony": {
@@ -127,7 +127,7 @@
       "戦闘開始時、カード #b1 枚を追加で引く。 NL 戦闘に #b4 回勝利するごとに永続的な効果を得る。効果は最大 #b4 つ",
       " NL #y1. 2ターン目以降の開始時、追加でカードを #b1 枚引く。",
       " NL #y2. 戦闘開始時に [E] を得る。",
-      " NL #y3.  (1) の効果が倍になる。",
+      " NL #y3. (1) の効果が倍になる。",
       " NL #y4. 2ターン目開始時、 [E] を得る。"
     ]
   },
@@ -172,7 +172,7 @@
     "NAME": "帝国暗部",
     "FLAVOR": "「私はかつて帝国を震え上がらせた悪名高き大罪人だ。」-ヴィクター",
     "DESCRIPTIONS": [
-      "敵を #y撃破 した時、全ての敵に #y脱力 #b2 と #y弱体  #b2 を与える。"
+      "敵を #y撃破 した時、全ての敵に #y脱力 #b2 と #y弱体 #b2 を与える。"
     ]
   },
   "aigisMod:WhiteDragon": {
@@ -231,7 +231,7 @@
     "NAME": "マグヌムオプス",
     "FLAVOR": "「こう見えて白の帝国の公認の錬金術士なのよ？」-ヘルミーネ",
     "DESCRIPTIONS": [
-      "獲得時、ポーションスロットを #b1 得る。 #yポーション を使用した時、戦闘終了まで、手札の  #yコモン と #yアンコモン カードを全て #yアップグレード する。 "
+      "獲得時、ポーションスロットを #b1 得る。 #yポーション を使用した時、戦闘終了まで、手札の #yコモン と #yアンコモン カードを全て #yアップグレード する。 "
     ]
   },
   "aigisMod:EmperorAwakening": {
@@ -321,7 +321,7 @@
     "NAME": "傷返の呪言",
     "FLAVOR": "「私にあなたの厄を祓わせてくれませんか？」-ミコト",
     "DESCRIPTIONS": [
-      "戦闘開始時、 #y式鬼 #b1 枚を手札に加える。  #y式鬼 は追加で #b3 ブロックを得る。"
+      "戦闘開始時、 #y式鬼 #b1 枚を手札に加える。 #y式鬼 は追加で #b3 ブロックを得る。"
     ]
   },
   "aigisMod:SerpentPoison": {
@@ -351,14 +351,14 @@
     "FLAVOR": "「吸血鬼の前の記憶？覚えてないの……。」-エデン",
     "DESCRIPTIONS": [
       "#y麻痺毒 のターン毎の減少が #b3 になる。",
-      "攻撃で #y麻痺毒 を与えた時、 仮初のHPを #b1 得る。"
+      "#y麻痺毒 を持つ敵に攻撃した時、 仮初のHPを #b1 得る。"
     ]
   },
   "aigisMod:BastetGem": {
     "NAME": "バステトの宝石",
     "FLAVOR": "「「呪われた宝石」、使用者に絶大な力を与える代償に、その魂を食らい続ける」-サバル",
     "DESCRIPTIONS": [
-      "1戦闘に3回、 #y呪い を #y廃棄 すると  #y筋力 #b1 を得る。"
+      "1戦闘に3回、 #y呪い を #y廃棄 すると #y筋力 #b1 を得る。"
     ]
   },
 
@@ -404,7 +404,7 @@
     "NAME": "シールドブレス",
     "FLAVOR": "「闇に堕ちた剣とて、輝きを守護することはできましょう。」-ヘイオス",
     "DESCRIPTIONS": [
-      "#y暗黒 #y騎士 をプレイした時、 #yトゲ #b1 を得る。",
+      "#yダーク #yファイター をプレイした時、 #yトゲ #b1 を得る。",
       " あなたの #yHP が #b50% 以下の間、 #y敏捷性 #b2 を得る。"
     ]
   },
@@ -448,7 +448,7 @@
     "NAME": "聖なるオーラ",
     "FLAVOR": "「人の気持ちが、私にもまだ残っていたなんて……」-ユリナ",
     "DESCRIPTIONS": [
-      "#y暗黒 #y騎士 カードを保留する。",
+      "#yダーク #yファイター カードを保留する。",
       " #b4 ターン目終了時、 #b10 #yブロック を得る。"
     ]
   },
