--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -129,7 +129,7 @@
 
   "SanmotoAction": {
     "TEXT": [
-      "play."
+      "東の国カードをプレイする。"
     ]
   },
 
@@ -350,7 +350,7 @@
 
   "ShukaAction": {
     "TEXT": [
-      "東の国カード ", " 枚まで選ぶ"
+      "東の国カードを ", " 枚まで選ぶ"
     ]
   }
 }
